--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "gql-test",
+  "name": "giza-ui",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/jest": "24.0.18",
+    "@types/lodash": "^4.14.138",
+    "@types/node": "12.7.5",
+    "@types/react": "16.9.2",
+    "@types/react-dom": "16.9.0",
     "axios": "^0.19.0",
-    "babel-eslint": "10.0.2",
     "bootstrap": "^4.3.1",
-    "eslint": "^6.3.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "^2.0.0",
-    "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^1.7.0",
     "lodash": "^4.17.15",
     "normalizr": "^3.4.1",
     "prop-types": "^15.7.2",
@@ -24,7 +22,10 @@
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "tslint-react": "^4.0.0",
+    "typescript": "3.6.3",
+    "utility-types": "^3.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,6 +47,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "peerDependencies": {}
+  }
 }
